--- a/src/client/home/home.css
+++ b/src/client/home/home.css
@@ -70,6 +70,16 @@
     border-radius: 50px;
 }
 
+#refresh-button{
+    width: 40px;
+    height: 40px;
+    background-color: darkgray;
+    position: absolute;
+    bottom: 50px;
+    left: 50px;
+    border-radius: 50px;
+}
+
 .post-box {
     height: auto;
     width: auto;
