--- a/src/client/home/home.css
+++ b/src/client/home/home.css
@@ -73,10 +73,12 @@
 #refresh-button{
     width: 40px;
     height: 40px;
+    background-image: url(../imgs/reload_posts.png);
+    background-size: cover;
     background-color: darkgray;
     position: absolute;
     bottom: 50px;
-    left: 50px;
+    right: 50px;
     border-radius: 50px;
 }
 
