Integrating new DB API into old create-post page

--- a/src/client/home/home.css
+++ b/src/client/home/home.css
@@ -73,7 +73,7 @@
 #refresh-button{
     width: 40px;
     height: 40px;
-    background-image: url(../imgs/reload_posts.png);
+    /* background-image: url(../imgs/reload_posts.png); */
     background-size: cover;
     background-color: darkgray;
     position: absolute;
