--- a/src/client/home/home.css
+++ b/src/client/home/home.css
@@ -73,13 +73,13 @@
 #refresh-button{
     width: 40px;
     height: 40px;
-    /* background-image: url(../imgs/reload_posts.png); */
-    background-size: cover;
     background-color: darkgray;
     position: absolute;
     bottom: 50px;
     right: 50px;
     border-radius: 50px;
+    background-size: cover;
+    background-image: url(../imgs/reload_posts.png);
 }
 
 .post-box {
@@ -93,4 +93,16 @@
     margin-bottom: 10px;
     margin-left: 10px;
     margin-right: 10px;
+}
+
+#tag_list_container {
+    width: 100px;
+    height: 150px;
+    position: absolute;
+    right: 100px;
+    top: 150px;
+}
+
+.tagButton {
+    color: white;
 }
