--- a/src/client/home/home.css
+++ b/src/client/home/home.css
@@ -22,6 +22,18 @@
     font-size: 40px;
     top: -10px;
 }
+#delete_post_button{
+   
+    background-color: #2c2e36 ;
+    color:white;
+    font-family: 'Courier New', Courier, monospace;
+
+} 
+#filterB{
+    font-family: 'Courier New', Courier, monospace;
+    
+
+}
 
 /* 
 #home-button {
@@ -56,6 +68,7 @@
     transform: translateX(-50%);
     border-radius: 10px;
     overflow: scroll;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 #HOME-create-post-button{
@@ -105,4 +118,6 @@
 
 .tagButton {
     color: white;
+    font-family: 'Courier New', Courier, monospace;
+
 }
