Final changes for milestone-03

--- a/src/client/create_post/create_post.css
+++ b/src/client/create_post/create_post.css
@@ -4,6 +4,7 @@ html {background-color: #303030}
 .dropdown-check-list {
     float: right;
     font-family: inherit;
+    width: 160px;
   }
   
   .dropdown-check-list .anchor {
